# raymarch

./: .gitignore  CMakeLists.txt  DebugFunc.h  camera.cpp  camera.h  gl_3_3.cpp  gl_core_3_3.c  gl_core_3_3.h  lens.cpp  lens.h  main.cpp  model.cpp  model.h  object.cpp  object.h  renderer.cpp  renderer.h  shader.cpp  shader.h
cmake/: Findglm.cmake
resources/glsl/: frag.frag  vert.vert
